version: 4.10 - add parameterized Tests and Custom ArgumentsProvider - add reddisson hibernate redid client - provide hibernate - redid 2nd level cache integration configuration (works) - fix some bugs in PlayerServlet - provide integration tests for PlayerServlet post method